# denis-2

./: .dockerignore  .gitignore  DOCKER_FIX.md  DOCUMENTACAO.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run.sh
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
processor/: __init__.py  admin.py  apps.py  image_processor.py  models.py  urls.py  views.py
processor/migrations/: 0001_initial.py  0002_imagesession_adjustments_processingsnapshot_and_more.py
templates/processor/: index.html
